@@ -131,6 +131,8 @@ extern sint temp_n;
 extern u16b *temp_g;
 extern byte *temp_y;
 extern byte *temp_x;
+extern sint light_n;
+extern u16b *light_g;
 extern byte (*cave_info)[256];
 extern byte (*cave_info2)[256];
 extern byte (*cave_feat)[DUNGEON_WID];
@@ -252,6 +254,8 @@ extern void do_cmd_view_map(void);
 extern errr vinfo_init(void);
 extern void forget_view(void);
 extern void update_view(void);
+extern void forget_monster_light(void);
+extern void update_monster_light(void);
 extern void forget_flow(void);
 extern void update_flow(void);
 extern void map_area(void);
