@@ -4088,7 +4088,7 @@ static void process_monster(int m_idx)
 	if (do_view)
 	{
 		/* Update the visuals */
-		p_ptr->update |= (PU_UPDATE_VIEW | PU_MONSTERS);
+		p_ptr->update |= (PU_UPDATE_VIEW | PU_MONSTERS | PU_UPDATE_LIGHT);
 
 		/* Fully update the flow XXX XXX XXX */
 		p_ptr->update |= (PU_FORGET_FLOW | PU_UPDATE_FLOW);
